feat: 新鲜出炉的 Vue3 实现移动端 Table 表格，支持固定头部、固定列、上拉加载等~

--- a/src/content/blog/一位00后专升本毕业后的一年——2023年中总结.md
+++ b/src/content/blog/一位00后专升本毕业后的一年——2023年中总结.md
@@ -4,9 +4,9 @@ pubDatetime: 2023-07-12T11:48:00.000Z
 modDatetime: 2023-07-12T11:48:00.000Z
 title: 一位00后专升本毕业后的一年——2023年中总结
 # 页面唯一地址
-slug: javascript-pre-build
+slug: record-20230712
 # 是否在首页精选版块显示此帖子
-featured: false
+featured: true
 # 将这篇文章标记为草稿。
 draft: false
 tags:
